# momo-bot

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  data_utils.py  emoji_dataset.json  emoji_dataset.txt  hint_dataset.txt  pyproject.toml  start.sh
src/: bot.py  data_utils.py  schemas.py  settings.py  utils.py
